# applications

./: README.md
TestApplication/app/: build.gradle.kts
TestApplication/gradle/: libs.versions.toml
social_media/: .gitignore  AGENTS.md
social_media/twitter-api/: .env.example  DEVELOPMENT.md  Dockerfile  README.md  README_HUMAN.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.sh  setup.py
social_media/twitter-api/scripts/: README.md  clear_data.py  init_db.py  seed_data.py
social_media/twitter-api/src/twitter_api/: __init__.py  app.py  config.py  database.py
social_media/twitter-api/src/twitter_api/models/: __init__.py  follow.py  tweet.py  user.py
social_media/twitter-api/src/twitter_api/routes/: auth.py  feed.py  follows.py  tweets.py  users.py
social_media/twitter-api/src/twitter_api/services/: feed_service.py  follow_service.py  tweet_service.py  user_service.py
social_media/twitter-api/src/twitter_api/utils/: decorators.py  jwt.py  password.py
social_media/twitter-api/tests/: __init__.py  conftest.py
social_media/twitter-api/tests/integration/: test_auth.py  test_tweets.py  test_users.py
social_media/twitter-api/tests/unit/: test_app.py  test_tweet_service.py  test_user_service.py
upstartFull/: ADD_PAGE.md  AGENTS.md  README.md  gradlew  settings.gradle.kts
upstartFull/app/: build.gradle.kts
upstartFull/gradle/: libs.versions.toml
upstartMinimal/: .gitignore  AGENTS.md  README.md  settings.gradle.kts
upstartMinimal/app/: build.gradle.kts
upstartMinimal/gradle/: libs.versions.toml
(+111 files in other folders)
